<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" 
    android:orientation="vertical">

	    <EditText android:id="@+id/edit_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />
	    
	    <EditText android:id="@+id/edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />
	    
	    <EditText android:id="@+id/edit_domain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/domain" />	   
        
		<EditText android:id="@+id/edit_server"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server" />
		
		<Button
	    android:id="@+id/register"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:text="@string/register"  
        android:onClick="click_register"
	     />

</LinearLayout>
