<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".HomeActivity" >

    <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/extension" />

<Button
    android:id="@+id/register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignTop="@+id/edit_message"
    android:onClick="click_register"
    android:text="@string/register" />

<Button
    android:id="@+id/call"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignTop="@+id/edit_message"
    android:layout_marginLeft="22dp"
    android:layout_toRightOf="@+id/edit_message"
    android:onClick="onMyButtonClick"
    android:text="@string/call_button" />

<Button
    android:id="@+id/login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/register"
    android:layout_below="@+id/register"
    android:layout_marginTop="22dp"
    android:onClick="onRegisterClick"
    android:text="@string/login" />

<Button
    android:id="@+id/logout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/login"
    android:layout_alignBottom="@+id/login"
    android:layout_alignLeft="@+id/call"
    android:onClick="closeLocalProfile"
    android:text="@string/logout" />

</RelativeLayout>